--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>teste 1b</title>
 </head>
 <body> <h1>página de teste para nosso</h1> 
-    Deu certo, Pagina criada.
-</body>
+    <h2>Deu certo, Pagina criada. </h2>
+
+    
+    </body>
 </html>
