--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>teste 1b</title>
 </head>
-<body> <h1>página de teste para nosso</h1> 
-    <h2>Deu certo, Pagina criada. </h2>
-
+<body> <h1>Colegio Esdadual Josè Ermirio de Moraes</h1> 
+    <h2>pagina criada com o objetivo de mostrar nosso colègio</h2>
+Aqui teremos 
     
     </body>
 </html>
