--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body> <h1>Colegio Esdadual Josè Ermirio de Moraes</h1> 
     <h2>pagina criada com o objetivo de mostrar nosso colègio</h2>
-Aqui teremos 
+Aqui teremos algumas midias e curiosidade referente a nossa escola
     
     </body>
 </html>
