--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body> <h1>Colegio Esdadual Josè Ermirio de Moraes</h1> 
     <h2>pagina criada com o objetivo de mostrar nosso colègio</h2>
-Aqui teremos algumas midias e curiosidade referente a nossa escola
-
+<p1>Aqui teremos algumas midias e curiosidade referente a nossa escola
+</p1>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/lY8QoSBlg4E?si=hKxR2EA8pVVXhexn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     
     </body>
